--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue",
+  "name": "electron-demo",
   "version": "0.0.1",
   "author": "dezhizhang <1541609448@qq.com>",
   "description": "An electron-vue project",
@@ -79,6 +79,7 @@
     "electron-devtools-installer": "^2.2.4",
     "element-ui": "^2.4.6",
     "file-loader": "^1.1.11",
+    "highcharts": "^6.1.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "0.4.0",
     "multispinner": "^0.2.1",
@@ -87,6 +88,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
+    "vue-highcharts": "^0.0.10",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.2.4",
     "vue-style-loader": "^4.1.0",
